test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics/stdout.snap
---
source: test/tests/tests.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
   Compiling library core (sway-lib-core)
   Compiling library std (sway-lib-std)
warning
   --> sway-lib-std/src/ecr.sw:221:26
    |
219 | #[deprecated(note = "std::ecr has been replaced by std::crypto, and is no longer maintained")]
220 | pub fn ec_recover_address(signature: B512, msg_hash: b256) -> Result<Address, EcRecoverError> {
221 |     let pub_key_result = ec_recover(signature, msg_hash);
    |                          ---------- deprecated function: std::ecr has been replaced by std::crypto, and is no longer maintained
222 | 
223 |     if let Err(e) = pub_key_result {
    |
____

warning
   --> sway-lib-std/src/ecr.sw:267:26
    |
265 | #[deprecated(note = "std::ecr has been replaced by std::crypto, and is no longer maintained")]
266 | pub fn ec_recover_address_r1(signature: B512, msg_hash: b256) -> Result<Address, EcRecoverError> {
267 |     let pub_key_result = ec_recover_r1(signature, msg_hash);
    |                          ------------- deprecated function: std::ecr has been replaced by std::crypto, and is no longer maintained
268 | 
269 |     if let Err(e) = pub_key_result {
    |
____

warning
  --> sway-lib-std/src/vm/evm/ecr.sw:43:26
   |
41 |     msg_hash: b256,
42 | ) -> Result<EvmAddress, EcRecoverError> {
43 |     let pub_key_result = ec_recover(signature, msg_hash);
   |                          ---------- deprecated function: std::ecr has been replaced by std::crypto, and is no longer maintained
44 | 
45 |     match pub_key_result {
   |
____

  Compiled library "std" with 3 warnings.
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics)
error
 --> test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics/src/main.sw:7:15
  |
5 | }
6 | 
7 | impl<T, const N: u64> A for [T; N] {
  |               ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
8 |     #[allow(dead_code)]
9 |     fn f(self) -> u64 {
  |
____

  Aborting due to 1 error.
error: Failed to compile const_generics

> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics --experimental const_generics
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
   Compiling library core (sway-lib-core)
   Compiling library std (sway-lib-std)
warning
   --> sway-lib-std/src/ecr.sw:221:26
    |
219 | #[deprecated(note = "std::ecr has been replaced by std::crypto, and is no longer maintained")]
220 | pub fn ec_recover_address(signature: B512, msg_hash: b256) -> Result<Address, EcRecoverError> {
221 |     let pub_key_result = ec_recover(signature, msg_hash);
    |                          ---------- deprecated function: std::ecr has been replaced by std::crypto, and is no longer maintained
222 | 
223 |     if let Err(e) = pub_key_result {
    |
____

warning
   --> sway-lib-std/src/ecr.sw:267:26
    |
265 | #[deprecated(note = "std::ecr has been replaced by std::crypto, and is no longer maintained")]
266 | pub fn ec_recover_address_r1(signature: B512, msg_hash: b256) -> Result<Address, EcRecoverError> {
267 |     let pub_key_result = ec_recover_r1(signature, msg_hash);
    |                          ------------- deprecated function: std::ecr has been replaced by std::crypto, and is no longer maintained
268 | 
269 |     if let Err(e) = pub_key_result {
    |
____

warning
  --> sway-lib-std/src/vm/evm/ecr.sw:43:26
   |
41 |     msg_hash: b256,
42 | ) -> Result<EvmAddress, EcRecoverError> {
43 |     let pub_key_result = ec_recover(signature, msg_hash);
   |                          ---------- deprecated function: std::ecr has been replaced by std::crypto, and is no longer maintained
44 | 
45 |     match pub_key_result {
   |
____

  Compiled library "std" with 3 warnings.
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics)
error
 --> test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics/src/main.sw:7:15
  |
5 | }
6 | 
7 | impl<T, const N: u64> A for [T; N] {
  |               ^ "const generics" are not supported here.
8 |     #[allow(dead_code)]
9 |     fn f(self) -> u64 {
  |
____

  Aborting due to 1 error.
error: Failed to compile const_generics
